# nexus

./: .dockerignore  .env.example  .gitignore  Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  system-prompt.md
.github/workflows/: build-and-push.yml  pr-checks.yml  test-and-deploy.yml
config/: settings.py  urls.py
documents/: admin.py  mcp.py  models.py  tests.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_add_hierarchy_and_aliases.py  0003_reparent_pit_docs.py
iac/: backend.tf  main.tf  outputs.tf  variables.tf
logs/: claude_transcript_20260405.txt
search/: embeddings.py  tests.py  urls.py  views.py
templates/: base.html
templates/documents/: create.html  detail.html  edit.html  list.html
templates/documents/partials/: document_list.html
